force-app/main/default/objects/Lead/fields/Bypass_Declarative__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Declarative__c</fullName>
    <description>Set or increment to bypass declarative operations</description>
    <label>Bypass Declarative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>