force-app/main/default/objects/Lead/fields/First_Owner_Worked__c.field-meta.xml
<CustomField>
    <fullName>First_Owner_Worked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First owner worked</description>
    <inlineHelpText>First owner worked</inlineHelpText>
    <label>First Owner Worked</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>